--- a/index.html
+++ b/index.html
@@ -20,15 +20,16 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!--NavBar-->
-    <nav>
+    <!--NavBar Start Here-->
+<i class="fas fa-bars fa-1x" id="menu-icon"></i>
+    <nav id="menu" class="hidden">
         <ul class="nav-upper
         flex-space-around">
             <li class="nav__list"><a href="index.html" 
                 class="nav__link">HOME</a></li>
-            <li class="nav__list"><a href="index.html" 
+            <li class="nav__list"><a href="Register.html" 
                 class="nav__link">Register</a></li>
-            <li class="nav__list"><a href="register.html" 
+            <li class="nav__list"><a href="login.htm" 
                 class="nav__link">Login</a></li>
             <li class="nav__list"><a href="logout.html" 
                 class="nav__link">Logout</a></li>
@@ -45,14 +46,35 @@
             <li class="nav__list">
                 <a href="card.html" id="Lower__nav__link">
                     <span><i class="fa-solid fa-cart-shopping"></i></span> Cart 2 Products -$124.40
-
-
                 </a>
             </li>
         </ul>
-
-
     </nav>
+        <!--NavBar End Here-->
+        <!--Main Start Here -->
+<main>
+    <h2>Home  Page</h2>
+    
+    </main>
+<!--Main Ends Here -->
+        <!--Footer start Here-->
+        <footer class="footer flex-space-around">
+            <div class="flex-space-around" >
+                <label for="Subscribe footer__input">Subscribe to our newslatter</label>
+                <input type="email" id="Subscribe" name="Subscribe" class="footer__input" placeholder="Your email address">
+                <button class="btn btn-subscribe"> Subscribe</button>
+            </div>
+
+            <div>
+                <p>&copy; Copy right 2024 Jahan Express. All rights reserved </p>
+            </div>
+
+
+
+        </footer>
+
+        <!--Footer End Here-->
+        <script src="./script/index.js"></script>
 
 
 </body>
