--- a/index.html
+++ b/index.html
@@ -133,21 +133,158 @@
                 <button class="btn">
                     <i class="fa-sharp fa-solid fa-magnifying-glass"></i>
                 </button>
-
-
-
-
             </div>
-
-
         </section>
 
+<!-- Products section start here -->
+<section class="products">
+    <article class="product card">
+        <div class="badge">
+            <span>5 in stock</span>
+            <hr class="hr-design">
+            <span>3 sold</span>
+        </div>
+        <img class="product__immage" src="./Immage/sunglass.jpg">
+        <div class="product__body">
+            <h3 class="product__name">Sun Glass</h3>
+            <p>
+                <span class="dot green"></span>
+                <span class="dot green"></span>
+                <span class="dot black"></span>
+            </p>
+            <p class="product__discription">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit...<a href="product.html" class="show-detail"><span>Show Detail</span></a>
+            </p>
+            <h4 class="product__price">$225.99</h4>
+            <p class="product__ratting">Rating: 4.99</p>
+            <button class="btn product__button">Add To cart</button>
+        </div>
+    </article>
+
+    
+    <article class="product card">
+        <div class="badge">
+            <span>8 in stock</span>
+            <hr class="hr-design">
+            <span>5 sold</span>
+        </div>
+        <img class="product__immage" src="./Immage/headphone.jpg">
+        <div class="product__body">
+            <h3 class="product__name">Head Phone</h3>
+            <p>
+                <span class="dot green"></span>
+                <span class="dot green"></span>
+                <span class="dot black"></span>
+            </p>
+            <p class="product__discription">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit...<a href="product.html" class="show-detail"><span>Show Detail</span></a>
+            </p>
+            <h4 class="product__price">$8.00</h4>
+            <p class="product__ratting">Rating: 4.50</p>
+            <button class="btn product__button">Add To cart</button>
+        </div>
+    </article>
+
+    <article class="product card">
+        <div class="badge">
+            <span>10 in stock</span>
+            <hr class="hr-design">
+            <span>5 sold</span>
+        </div>
+        <img class="product__immage" src="./Immage/Watch.jpg">
+        <div class="product__body">
+            <h3 class="product__name">Digital Watch</h3>
+            <p>
+                <span class="dot green"></span>
+                <span class="dot green"></span>
+                <span class="dot black"></span>
+            </p>
+            <p class="product__discription">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit...<a href="product.html" class="show-detail"><span>Show Detail</span></a>
+            </p>
+            <h4 class="product__price">$20.00</h4>
+            <p class="product__ratting">Rating: 4.50</p>
+            <button class="btn product__button">Add To cart</button>
+        </div>
+    </article>
 
 
+    <article class="product card">
+        <div class="badge">
+            <span>7 in stock</span>
+            <hr class="hr-design">
+            <span>4 sold</span>
+        </div>
+        <img class="product__immage" src="./Immage/mobile.jpg">
+        <div class="product__body">
+            <h3 class="product__name">Mobile</h3>
+            <p>
+                <span class="dot green"></span>
+                <span class="dot green"></span>
+                <span class="dot black"></span>
+            </p>
+            <p class="product__discription">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit...<a href="product.html" class="show-detail"><span>Show Detail</span></a>
+            </p>
+            <h4 class="product__price">$220.00</h4>
+            <p class="product__ratting">Rating: 4.00</p>
+            <button class="btn product__button">Add To cart</button>
+        </div>
+    </article>
 
 
+    <article class="product card">
+        <div class="badge">
+            <span>10 in stock</span>
+            <hr class="hr-design">
+            <span>4 sold</span>
+        </div>
+        <img class="product__immage" src="./Immage/laptop.jpg">
+        <div class="product__body">
+            <h3 class="product__name">laptop</h3>
+            <p>
+                <span class="dot green"></span>
+                <span class="dot green"></span>
+                <span class="dot black"></span>
+            </p>
+            <p class="product__discription">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit...<a href="product.html" class="show-detail"><span>Show Detail</span></a>
+            </p>
+            <h4 class="product__price">$350.40</h4>
+            <p class="product__ratting">Rating: 4.80</p>
+            <button class="btn product__button">Add To cart</button>
+        </div>
+    </article>
 
 
+    <article class="product card">
+        <div class="badge">
+            <span>5 in stock</span>
+            <hr class="hr-design">
+            <span>2 sold</span>
+        </div>
+        <img class="product__immage" src="./Immage/camera.jpg">
+        <div class="product__body">
+            <h3 class="product__name">Camera</h3>
+            <p>
+                <span class="dot green"></span>
+                <span class="dot green"></span>
+                <span class="dot black"></span>
+            </p>
+            <p class="product__discription">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit...<a href="product.html" class="show-detail"><span>Show Detail</span></a>
+            </p>
+            <h4 class="product__price">$850.00</h4>
+            <p class="product__ratting">Rating: 4.40</p>
+            <button class="btn product__button">Add To cart</button>
+        </div>
+    </article>
+
+
+</section>
+
+
+<!-- Products section ends here -->
     </div>
 </main>
 <!--Main Ends Here -->
@@ -162,10 +299,6 @@
             <div>
                 <p>&copy; Copy right 2024 Jahan Express. All rights reserved </p>
             </div>
-
-            
-
-
 
         </footer>
 
