--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <h3 class="product__name">Sun Glass</h3>
             <p>
                 <span class="dot green"></span>
-                <span class="dot green"></span>
+                <span class="dot red"></span>
                 <span class="dot black"></span>
             </p>
             <p class="product__discription">
@@ -161,7 +161,7 @@
         </div>
     </article>
 
-    
+
     <article class="product card">
         <div class="badge">
             <span>8 in stock</span>
@@ -173,7 +173,7 @@
             <h3 class="product__name">Head Phone</h3>
             <p>
                 <span class="dot green"></span>
-                <span class="dot green"></span>
+                <span class="dot red"></span>
                 <span class="dot black"></span>
             </p>
             <p class="product__discription">
@@ -196,7 +196,7 @@
             <h3 class="product__name">Digital Watch</h3>
             <p>
                 <span class="dot green"></span>
-                <span class="dot green"></span>
+                <span class="dot red"></span>
                 <span class="dot black"></span>
             </p>
             <p class="product__discription">
@@ -220,7 +220,7 @@
             <h3 class="product__name">Mobile</h3>
             <p>
                 <span class="dot green"></span>
-                <span class="dot green"></span>
+                <span class="dot red"></span>
                 <span class="dot black"></span>
             </p>
             <p class="product__discription">
@@ -244,7 +244,7 @@
             <h3 class="product__name">laptop</h3>
             <p>
                 <span class="dot green"></span>
-                <span class="dot green"></span>
+                <span class="dot red"></span>
                 <span class="dot black"></span>
             </p>
             <p class="product__discription">
@@ -268,7 +268,7 @@
             <h3 class="product__name">Camera</h3>
             <p>
                 <span class="dot green"></span>
-                <span class="dot green"></span>
+                <span class="dot red"></span>
                 <span class="dot black"></span>
             </p>
             <p class="product__discription">
@@ -279,15 +279,36 @@
             <button class="btn product__button">Add To cart</button>
         </div>
     </article>
-
-
-</section>
-
-
 <!-- Products section ends here -->
+
+    <!-- pagination Section Start Here -->
+</section>
+<div class="pagination">
+    <button class="btn pagination__btn">
+        <i class="fas fa-less-than"></i>
+    </button>
+    <button class="btn pagination__btn">2</button>
+    <button class="btn pagination__btn">3</button>
+    <button class="btn pagination__btn">4</button>
+    <button class="btn pagination__btn">5</button>
+    <button class="btn pagination__btn">6</button>
+    <button class="btn pagination__btn">7</button>
+    <button class="btn pagination__btn">8</button>
+    <button class="btn pagination__btn">9</button>
+    <button class="btn pagination__btn">10</button>
+    <button class="btn pagination__btn">...</button>
+    <button class="btn pagination__btn">50</button>
+    <button class="btn pagination__btn">
+        <i class="fas fa-greater-than"></i>
+    </button>
+</div>
+  <!-- pagination Section End Here -->
+
     </div>
 </main>
 <!--Main Ends Here -->
+
+
         <!--Footer start Here-->
         <footer class="footer flex-space-around">
             <div class="flex-space-around" >
