--- a/product.html
+++ b/product.html
@@ -52,8 +52,30 @@
     </nav>
         <!--NavBar End Here-->
         <!--Main Start Here -->
-<main>
-    <h2>Product  Page</h2>
+<main class="flex-center">
+    <div class="main-content">
+        <section class="product__detail flex-center">
+            <div class="product-detail-left flex-center">
+                <img class="product___detail-img"  src="./Immage/Watch.jpg" alt="Watch">
+            </div>
+
+            <div class="product-detail-right">
+                <h3 class="product__name">Sun Glass</h3>
+                <strong> Product Descriiptin</strong>
+                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde aperiam accusantium autem veritatis corrupti. Praesentium eum aliquam adipisci optio, est iusto tempore, accusantium quos explicabo molestiae error, in cumque voluptate ut hic. Tenetur, itaque reprehenderit?</p>
+                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde aperiam accusantium autem veritatis corrupti. Praesentium eum aliquam adipisci optio, est iusto tempore, accusantium quos explicabo molestiae error, in cumque voluptate ut hic. Tenetur, itaque reprehenderit?</p>
+                <h4 class="product__price">Prodcut Catagory: Watch</h4>
+                <h4 class="product__price">Price: $225.99</h4>
+                <p class="product__ratting">Rating: 4.99</p>
+                <button class="btn product__button">Add To cart</button>
+                <button class="btn"> Back to Shopping</button>
+            </div>
+
+
+
+        </section>
+
+    </div>   
     
     </main>
 <!--Main Ends Here -->
