Register, login & Profile added

--- a/profile.html
+++ b/profile.html
@@ -53,8 +53,24 @@
         <!--NavBar End Here-->
         <!--Main Start Here -->
 <main>
-    <h2>Profile  Page</h2>
-    
+    <section class="profile flex-center">
+        <h2 class="section__title text-center">
+            User Profile
+        </h2>
+        
+        <div class="card flex-center">
+            <img src="./Immage/jahan.png" alt="Profile-photo" class="profile__img">
+            <h2 class="profile__name">Khan Jahan Ali</h2>
+            <p class="profile__email">mkjahan91@gmail.com</p>
+            <p class="profile__about">Love You All</p>
+
+            <div class="profile__btn">
+                <button class="btn profile__edit-btn "><i class="far fa-edit fa-2x"></i></button>
+                <button class="btn profile__delete-btn "><i class="far fa-trash-alt fa-2x"></i></button>
+            </div>
+        </div>
+
+    </section>
     </main>
 <!--Main Ends Here -->
         <!--Footer start Here-->
