--- a/Register.html
+++ b/Register.html
@@ -53,7 +53,36 @@
         <!--NavBar End Here-->
         <!--Main Start Here -->
 <main>
-    <h2>Register  Page</h2>
+    <section class="register">
+        <h2 class="section-title text-center">User Registration</h2>
+        <div class="card">
+            <form action="" class="form">
+                <div class="form-control flex-center">
+                    <label for="name">Name </label>
+                    <input type="text" id="name" required autocomplete="name">
+                </div>
+
+                <div class="form-control flex-center">
+                    <label for="Email">Email </label>
+                    <input type="Email" id="Email" required autocomplete="Email">
+                </div>
+
+                <div class="form-control flex-center">
+                    <label for="password">Pasward </label>
+                    <input type="password" id="password" required autocomplete="password">
+                </div>
+
+                <div class="form-control flex-center">
+                    <label for="about">About me </label>
+                    <textarea name="about" id="about"></textarea>
+                </div>
+
+                <div class="form-control flex-center from-btn-feild">
+                    <button type="submit" class="btn contact-btn">Submit</button>
+                </div>
+            </form>
+        </div>
+    </section>
     
     </main>
 <!--Main Ends Here -->
