--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 </div>
             </div>
         </header>
-        <!-- Header Start here -->
+        <!-- Header end here -->
 
         <!--Main Start Here -->
 <main class="flex-center">
