--- a/login.htm
+++ b/login.htm
@@ -53,7 +53,26 @@
         <!--NavBar End Here-->
         <!--Main Start Here -->
 <main>
-    <h2>Login  Page</h2>
+    <section class="login">
+        <h2 class="section-title text-center">User Login</h2>
+        <div class="card">
+            <form action="" class="form">
+                <div class="form-control flex-center">
+                    <label for="Email">Email </label>
+                    <input type="Email" id="Email" required autocomplete="Email">
+                </div>
+
+                <div class="form-control flex-center">
+                    <label for="password">Pasward </label>
+                    <input type="password" id="password" required autocomplete="password">
+                </div>
+                
+                <div class="form-control flex-center from-btn-feild">
+                    <button type="submit" class="btn contact-btn">Submit</button>
+                </div>
+            </form>
+        </div>
+    </section>
     
     </main>
 <!--Main Ends Here -->
